--- a/assignment/styles.css
+++ b/assignment/styles.css
@@ -1,7 +1,20 @@
 header{
     background-color: blue;
+    text-align: center;
+    color:black;
 }
-h2{
+.name{
     background-color: brown;
-    color:beige;
+    color:blue;
+    text-align: center;
+}
+.vehicles{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+
+h3{
+    text-align: center;
 }
